fixed spacing on phone

--- a/src/views/Footer/Footer.scss
+++ b/src/views/Footer/Footer.scss
@@ -8,16 +8,15 @@
     }
   }
   .newsletter-form {
-    padding: 30px 0px;
     border-radius: 3px;
     form {
       background-color: #172a46;
-      padding: 20px;
+      padding: 16px;
       .form-group {
         display: flex;
         input {
           height: 50px;
-          padding: 15px;
+          padding: 16px;
           margin-bottom: 0;
           &[type="email"] {
             width: 70%;
